--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="12">
     <tr>
-      <td><img src="images/sonic circle.png" alt="Imagen perfil"></td>
+      <td><img src="images/img-perfil.png" alt="Imagen perfil"></td>
       <td><h1>Erik Jahaziel Reyes Hernandez</h1>
           <p><em>Estudiante del <strong><a href="http://www.itoaxaca.edu.mx/">ITO</a></strong></em></p>
           <p>Actualmente soy estudiante, pues estoy en la carrera <em><strong>Ingenieria
